Bug 116813 - copy down does not scroll
Summary: copy down does not scroll
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0 target:6.0.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-04-05 08:13 UTC by Elmar
Modified: 2018-04-17 08:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar 2018-04-05 08:13:04 UTC
Description:
When I add text that ends in a number, by dragging on the bottom RH corner I can copy the text and increment the numbers. That woks fine. However, in previous version when come to edge of window, the sheet will scroll until I stop.
It does not

Steps to Reproduce:
1. type A001 into cell A10
2. drag the text down beyond sheet visible edge
3. cells continue to copy for about 10 cells then stop

Actual Results:  
stops copying (down) once cursor reaches the edge of the screen or wherever I stop before that

When drag/copy horizontally, it works as it should.
When drag/copy up, it works as expected.
when drag to left, works as expected.

Tested in v5.4 - works correctly.


Expected Results:
sheet should scroll down


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes

Version: 6.1.0.0.alpha0+
Build ID: 28012351ae273d41af548a29a14d9d842e66f6f6
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-04-03_23:16:06
Locale: en-ZA (en_ZA.UTF-8); Calc: group



User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:59.0) Gecko/20100101 Firefox/59.0
Comment 1 raal 2018-04-09 17:15:36 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara; Could you possibly take a look at this one? Thanks
 187c39fa2ea33fe5d34853fc628d5db6e846c2c0 is the first bad commit
commit 187c39fa2ea33fe5d34853fc628d5db6e846c2c0
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Fri Mar 16 04:50:46 2018 -0700

    source 7619390bd15fa26fc8f74d75f187cf8bf2fca58b

author	Caolán McNamara <caolanm@redhat.com>	2018-03-15 16:54:44 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-03-16 10:31:15 +0100
commit 7619390bd15fa26fc8f74d75f187cf8bf2fca58b (patch)
tree efd3e88735e24c5720d121dbef9163e8a4d3ba3f
parent 24546ac5ea1d58d7cbd07d093b99c9ab07406b00 (diff)
Comment 2 Commit Notification 2018-04-10 19:51:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e43d13b61181fbd47001faa47b178cda69e97890

Resolves: tdf#116813 Height/Width swapped

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2018-04-11 10:22:50 UTC
I think it was a dofus width vs height mistake on my side, testing appreciated
Comment 4 Xisco Faulí 2018-04-12 08:50:27 UTC
@Elmar, @raal, could you please test the behaviour after Caolán's fix?
I've tried to test it but I can't reproduce the original report before the fix...
Comment 5 Elmar 2018-04-13 12:12:30 UTC
scrolls fine now.
But have to revert to an earlier version because existing documents now crash on opening or soon after.
Comment 6 Commit Notification 2018-04-13 15:04:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=14b042d86e5d3e20dbc73efe08b831810bd52711&h=libreoffice-6-0

Resolves: tdf#116813 Height/Width swapped

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-04-17 08:10:02 UTC
(In reply to Elmar from comment #5)
> scrolls fine now.
> But have to revert to an earlier version because existing documents now
> crash on opening or soon after.

Closing as VERIFIED FIXED!