Resolves: tdf#116813 Height/Width swapped

Change-Id: I9b41a4b65fda895ed73fa346fb0b8e13df010706